welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:22: error: not found: value SetCouleurBrosse
  	 {SetCouleurBrosse(c);baisseBrosse;leveBrosse()
          ^